Cycles Crash - Cycles crashes before sampling when certain meshes have autosmooth enabled. #50876

Closed
opened 2017-03-06 22:23:53 +01:00 by Carlo Andreacchio · 11 comments

System Information
Windows 7, core i7 920 x64 gtx1080

Blender Version
Broken: 80444ef (first crash on our builds was from 5c3216e)
Worked: 5552e83

Short description of error
On certain meshes with autosmooth enabled, cycles crashes out.

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. press f12
  3. crash
  4. open attached blend file again
  5. open mesh data tab
  6. turn off autosmooth
  7. press f12
  8. no crash

It does not matter whether CPU or GPU rendering is enabled.

crash.blend

**System Information** Windows 7, core i7 920 x64 gtx1080 **Blender Version** Broken: 80444ef (first crash on our builds was from 5c3216e) Worked: 5552e83 **Short description of error** On certain meshes with autosmooth enabled, cycles crashes out. **Exact steps for others to reproduce the error** 1. Open attached blend file 2. press f12 3. crash 4. open attached blend file again 5. open mesh data tab 6. turn off autosmooth 7. press f12 8. no crash It does not matter whether CPU or GPU rendering is enabled. [crash.blend](https://archive.blender.org/developer/F504356/crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Potentially could be caused by 36c4fc1

Potentially could be caused by 36c4fc1

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
Bastien Montagne was assigned by Sergey Sharybin 2017-03-07 10:05:19 +01:00

Can confirm the crash, but not really familiar with the re-worked code from @mont29.

@mont29, mind having a look? The input mesh is valid, but for some reason *lnor_space is NULL. So either it's a bug somewhere deeper in lnot space calculation or we are missing some NULL pointer checks?

Can confirm the crash, but not really familiar with the re-worked code from @mont29. @mont29, mind having a look? The input mesh is valid, but for some reason `*lnor_space` is NULL. So either it's a bug somewhere deeper in lnot space calculation or we are missing some NULL pointer checks?

Issue is deep in loop normals code actually, not specific to split faces. It's due to weird geometry, simplified the case in file below in case you'd like to add it as test @Sergey?

crash.blend

Still looking into a proper fix… :/

Issue is deep in loop normals code actually, not specific to split faces. It's due to weird geometry, simplified the case in file below in case you'd like to add it as test @Sergey? [crash.blend](https://archive.blender.org/developer/F504844/crash.blend) Still looking into a proper fix… :/

@mont29, nice simplification. I'll add it to the unit tests once the issue is solved, so we don't move tests/code into inconsistent state.

@mont29, nice simplification. I'll add it to the unit tests once the issue is solved, so we don't move tests/code into inconsistent state.

We have figured out how we are creating these meshes (combination of remove doubles -> limited dissolve with autosmooth shade enabled, our usual process for cleaning up high poly objects which don't need to have that much complexity to them)

Just wondering if there has been any update to this bug?

We have figured out how we are creating these meshes (combination of remove doubles -> limited dissolve with autosmooth shade enabled, our usual process for cleaning up high poly objects which don't need to have that much complexity to them) Just wondering if there has been any update to this bug?

Yes there, I understand the problem and have a first version of fix, but not much happy with it currently, trying to find a better solution.

Note that it’s actually a bug deep in custom normals process, which can also (among other thing) generate wrong normals at those vertices…

Yes there, I understand the problem and have a first version of fix, but not much happy with it currently, trying to find a better solution. Note that it’s actually a bug deep in custom normals process, which can also (among other thing) generate wrong normals at those vertices…

This issue was referenced by 1410ea0478

This issue was referenced by 1410ea04788aad95f84b5d8caf077f9d8b51d0c3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50876
No description provided.